# cml

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
examples/: CMakeLists.txt  linear_regression.c  nn_nonlinear_regression.c
include/cml/: cml.h  context.h  data.h  linear.h  loss.h  nn.h  optimizer.h  scope.h  sgd.h  status.h  tape.h  tensor.h  trainer.h
src/: CMakeLists.txt  cml.c  context.c  context.h  data.c  data.h  linear.c  linear.h  loss.c  nn.c  optimizer.c  random.c  random.h  scope.c  sgd.c  sgd.h  tape.c  tape.h  tensor.c  tensor.h  trainer.c  trainer.h
src/backend/: backend.c  backend.h  cpu_backend.c  cuda_backend.cu
src/memory/: arena.c  arena.h
tests/: CMakeLists.txt  test_cml.c  test_context.c  test_cuda_parity.c  test_data.c  test_integration.c  test_linear.c  test_loss.c  test_nn.c  test_optimizer.c  test_sgd.c  test_tape.c  test_tensor.c  test_trainer.c
